@@ -465,6 +465,11 @@ See the \fBFEATURE AREAS\fP section for details.
 This setting defines the current vendor.
 If not set, it will discover the current vendor by reading
 \fB\%/etc/dpkg/origins/default\fP.
+.TP
+.B DEB_BUILD_PATH
+This variable sets the build path (since dpkg 1.18.8) to use in features
+such as \fBfixdebugpath\fP so that they can be controlled by the caller.
+This variable is currently Debian and derivatives-specific.
 .
 .SH FILES
 .SS Configuration files
