@@ -67,6 +67,8 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
       Dpkg::Index to support these.
     - Fix Dpkg::Deps so that architecture qualifiers only imply one another
       if they are the same. Closes: #745366, #827628
+    - Add support for new environment variable DEB_BUILD_PATH to be able to
+      control the path in the fixdebugpath feature in Dpkg::Vendor::Debian.
   * Test suite:
     - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
       to 99999.
